agregado a back de ventas ventaRoutes y tipoVentaRoutes asi como modelos de Venta y tipoVenta con sus rutas en index.js

--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-
   },
   "keywords": [
     "node",
@@ -21,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
@@ -31,5 +31,4 @@
   "devDependencies": {
     "nodemon": "^2.0.22"
   }
-
 }
